[package]
name = "decimal_enclave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "./bindings", package = "foundry-contracts" }
tokio = { version = "1.32.0", features = ["full"] }