[package]
name = "decimal_enclave"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bindings = { path = "./bindings", package = "foundry-contracts" }
ethers ={version = "2", features = ["abigen", "ws", "rustls"] }
lazy_static = "1.4.0"
tokio = { version = "1.32.0", features = ["full"] }
